# ToDo-Spec-Driven

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sp.constitution.md
history/prompts/general/: 5-check-and-update-files.general.prompt.md  6-project-setup-phase1.general.prompt.md  7-project-scan-deep-scan.general.prompt.md
history/prompts/plan/: 3-plan-phase1-todo-app.plan.prompt.md
history/prompts/spec/: 1-create-basic-features-spec.spec.prompt.md  2-specify-phase1-todo-app.spec.prompt.md  4-clarify-phase1-todo-spec.spec.prompt.md
history/prompts/tasks/: 8-phase1-tasks-breakdown.tasks.prompt.md  9-full-implementation-phase1.tasks.prompt.md
specs_history/: phase1_basic_features_v1.spec.md  phase1_dev_plan_v1.plan.md  phase1_tasks_v1.tasks.md
src/todo_app/: __init__.py  app.py  main.py  models.py  storage.py  ui.py  utils.py
src/todo_app/features/: add_task.py  delete_task.py  list_tasks.py  toggle_task.py  update_task.py
